--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/css/index.css" />
+    <link rel="stylesheet" href="./src/css/leaflet.css" />
     <title>ECA Beauty</title>
   </head>
   <body>
@@ -61,7 +62,15 @@
 
    
 
-    <div id="programari"></div>
+    <div id="programari">
+      <h1>Programari</h1>
+
+    </div>
+
+    <div id="map-container">
+    
+    <div id="map"></div>
+  </div>
 
     <footer id="footer">
       <div class="footer-container">
@@ -72,7 +81,7 @@
       </div>
       
     </footer>
-
+    <script src="./src/js/leaflet.js"></script>
     <script src="./src/js/index.js" type="text/javascript"></script>
   </body>
 </html>
